namespace LeadersBoardGame.GameLogic.Enums;

public enum GameMode
{
    Discovery,
    Strategist
}