namespace LeadersBoardGame.GameLogic.Enums;

public enum GamePhaseType
{
    Banishment,
    TurnStart,
    Actions,
    Recruitment,
    TurnEnd
}