namespace LeadersBoardGame.GameLogic.HistoryEntries.Phases;

using System.Collections.Generic;
using LeadersBoardGame.GameLogic.Actions;

public class TurnStartPhase : IPhase, ISegment
{
    public List<IGameAction> Actions => throw new System.NotImplementedException();

    public IGameAction StartAction => throw new System.NotImplementedException();

    public IGameAction EndAction => throw new System.NotImplementedException();
}