classDiagram
    direction TB

    %% Enums
    class TeamColor {
        <<enumeration>>
        Black
        White
    }

    class CharacterType {
        <<enumeration>>
    }

    class GameMode {
        <<enumeration>>
    }

    class GamePhaseType {
        <<enumeration>>
    }

    %% Interfaces
    class IHistoryEntry {
        <<interface>>
        +Team : TeamColor
    }

    class ISegment {
        <<interface>>
        +StartAction : IGameAction
        +EndAction : IGameAction
    }

    class IPhase {
        <<interface>>
        +Actions : List~IGameAction~
    }

    %% Phases
    class TurnStartPhase
    class ActionsPhase
    class RecruitmentPhase
    class TurnEndPhase
    class BanishmentPhase

    %% Turn
    class Turn {
        +TurnStartPhase : TurnStartPhase
        +ActionsPhase : ActionsPhase
        +RecruitmentPhase : RecruitmentPhase
        +TurnEndPhase : TurnEndPhase
    }

    %% History
    class GameConfig {
        +Players : List~Player~
        +FirstPlayer : Player
        +GameMode : GameMode
        +InitialRecruitableCards : List~CharacterCard~
        +InitialPlacements : List~IGameAction~
    }

    class GameHistory {
        +Config : GameConfig
        +Entries : List~IHistoryEntry~
    }

    class GamePhase {
        +PhasePlayer : Player
        +PhaseType : GamePhaseType
    }

    %% Entités
    class Position {
        +X : Integer
        +Y : Integer
    }

    class Character {
        +Id : Guid
        +Type : CharacterType
        +Team : TeamColor
    }

    class Cell {
        +Pos : Position
        +Character : Character
    }

    class Board {
        +Cells : List~Cell~
    }

    class Player {
        +Name : String
        +Team : TeamColor
    }

    %% Héritage interfaces
    ISegment <|-- IPhase
    IPhase <|.. TurnStartPhase
    IPhase <|.. ActionsPhase
    IPhase <|.. RecruitmentPhase
    IPhase <|.. TurnEndPhase
    IPhase <|.. BanishmentPhase
    ISegment <|.. Turn
    IHistoryEntry <|.. Turn
    IHistoryEntry <|.. BanishmentPhase

    %% Relations structurelles
    GameHistory --> GameConfig
    GameHistory --> IHistoryEntry
    Turn --> TurnStartPhase
    Turn --> ActionsPhase
    Turn --> RecruitmentPhase
    Turn --> TurnEndPhase
    Turn --> TeamColor
    BanishmentPhase --> TeamColor
    Board "1" --> "0..*" Cell
    Cell --> Position
    Cell "0..1" --> "0..1" Character

    %% Relations vers enums
    Character --> CharacterType
    Character --> TeamColor
    GamePhase --> GamePhaseType
    GamePhase --> Player
    Player --> TeamColor
    GameConfig --> GameMode
